[package]
name = "unisock"
version = "1.0.0"
edition = "2021"
authors = ["Jiening Yu <jiening.yu@outlook.com>"]
description = "Unified socket with different implementations"
repository = "https://codeberg.org/DM-Earth/unisock"
license = "AGPL-3.0-or-later"
keywords = ["socket", "unisock"]
categories = ["network-programming", "asynchronous"]

[dependencies]

[lints]
workspace = true

[workspace]
members = ["impl/*"]

[workspace.lints.rust]
missing-docs = "warn"
missing-debug-implementations = "warn"
let-underscore-drop = "warn"
single-use-lifetimes = "warn"
trivial-numeric-casts = "warn"
elided-lifetimes-in-paths = "deny"
unused-lifetimes = "forbid"
unused-macro-rules = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"
dyn-drop = "forbid"
ellipsis-inclusive-range-patterns = "forbid"
exported-private-dependencies = "forbid"
uncommon-codepoints = "deny"

[workspace.lints.clippy]
cloned-instead-of-copied = "warn"
if-not-else = "warn"
if-then-some-else-none = "warn"
impl-trait-in-params = "warn"
macro-use-imports = "forbid"
str-to-string = "warn"
use-debug = "warn"
iter-without-into-iter = "warn"
decimal-literal-representation = "warn"
