[package]
name = "unisock-smol-tungstenite"
version = "0.0.1"
description = "async-tungstenite WebSocket backend for unisock"
keywords = ["smol", "socket", "unisock"]
categories = ["network-programming", "asynchronous"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-io = "2.3"
futures-lite = "2.3"
socket2 = { version = "0.6.3", features = ["all"] }
unisock = "1.0"
async-tungstenite = "0.34.0"
futures-sink = "0.3"

[lints]
workspace = true

[features]
