[package]
name = "unisock-smol-tungstenite"
version = "0.1.0"
description = "async-tungstenite WebSocket backend for unisock"
keywords = ["smol", "socket", "unisock"]
categories = ["network-programming", "asynchronous"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unisock = { version = "1.0", path = "../../" }
async-io = "2.6"
async-net = "2.0"
futures-lite = "2.3"
futures-util = { version = "0.3", features = ["sink"] }
async-tungstenite = { version = "0.34", features = ["smol-runtime"] }

[lints]
workspace = true

[features]
