[package]
name = "unisock-smol"
version = "0.1.0"
edition = "2021"
authors = ["Jiening Yu <jiening.yu@outlook.com>"]
description = "async-io TCP & UDP backend for unisock"
repository = "https://codeberg.org/DM-Earth/unisock"
license = "AGPL-3.0-or-later"
keywords = ["smol", "socket", "unisock"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-io = "2.3"
futures-lite = "2.3"
socket2 = { version = "0.5", features = ["all"] }
unisock = { version = "1.0", path = "../../" }
scc = "2.1"
ahash = "0.8"

[lints]
workspace = true

[features]
