[package]
name = "unisock-smol"
version = "0.1.0"
description = "async-io TCP & UDP backend for unisock"
keywords = ["smol", "socket", "unisock"]
categories = ["network-programming", "asynchronous"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-io = "2.3"
futures-lite = "2.3"
socket2 = { version = "0.6.3", features = ["all"] }
unisock = "1.0"
scc = "3.6.12"
ahash = "0.8"

[lints]
workspace = true

[features]
